Fixes #57 (Migration to JUnit 5)